# Banana-Catalog

./: README.md
list-client/: index.html  package-lock.json  package.json
list-client/src/: App.tsx  api.ts  index.css
list-client/src-tauri/: tauri.conf.json
list-client/src-tauri/src/: lib.rs
local-server/: Cargo.toml  schema.sql
local-server/src/: main.rs
