[package]
name = "local-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tower-http = { version = "0.4", features = ["cors"] }
# http crate removed; use axum::http re-exports instead

